# opencv-dnn-face-detector

./: .clang-tidy  .gitignore  CMakeLists.txt  simple2.py
cmake/: CUDASettings.cmake  CompilerOptions.cmake  CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: CMakeLists.txt  main.cpp
src/face_detector/: CMakeLists.txt  face_detector.cpp  face_detector.hpp
src/opt_parser/: CMakeLists.txt  opt_parser.cpp  opt_parser.hpp  opt_parser_test.cpp
src/utils/: CMakeLists.txt  frame_counter.cpp  frame_counter.hpp
test/: CMakeLists.txt  test.cpp
